fix: smallCard width when scrolling fast on mobile

--- a/src/components/SmallCard/SmallCard.module.scss
+++ b/src/components/SmallCard/SmallCard.module.scss
@@ -25,7 +25,7 @@
   background-color: colors.$brown200;
   border-radius: .5rem;
   max-width: 300px;
-  min-width: 200px;
+  min-width: 258px;
   cursor: pointer;
   height: 100%;
 
